<resources>
    <string name="app_name">MyPOS Cashier</string>
    <string name="quit">Exit Kasir</string>
    <string name="really_quit">Realy Quit ?</string>
    <string name="yes">Yes</string>
    <string name="help">
        Transaction: \n - Create new sales transaction \n\n
        Master : \n - For setting item master, price, customer, etc. \n\n
        Setting: \n - Seting hardware printer, bluetooth, connection. \n\n
        Help : \n - This page. \n\n
        Exit : \n - End application \n\n
    </string>
    <string name="title_activity_help">HelpActivity</string>

    <string name="menu_utama_transaction">Transaction</string>
    <string name="menu_utama_reports">Reports</string>
    <string name="menu_utama_master">Master</string>
    <string name="menu_utama_setting">Setting</string>
    <string name="menu_utama_help">Help</string>
    <string name="menu_utama_exit">Exit</string>

    <string name="mnu_tran_new_order">New Order</string>
    <string name="mnu_tran_order_open">Pending Order</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_test3">test3</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_tes3">tes3</string>
    <string name="action_register">Register</string>
    <string name="login_text">Enter your valid username and password here</string>

</resources>
